# portfolio-qa

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
allure-report-demo/: README.md
allure-report-demo/allure-config/: categories.json  environment.properties
playwright-test-demo/: Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
playwright-test-demo/pages/: __init__.py  base_page.py  checkbox_page.py  dropdown_page.py  dynamic_controls_page.py  file_upload_page.py  hovers_page.py  login_page.py  secure_page.py
playwright-test-demo/tests/: __init__.py  conftest.py  test_checkboxes.py  test_data.py  test_dropdown.py  test_dynamic_controls.py  test_file_upload.py  test_hovers.py  test_login.py  test_network_interception.py
playwright-test-demo/tests/api/: test_jsonplaceholder.py
playwright-test-demo/tests/bdd/features/: login.feature
playwright-test-demo/tests/bdd/step_defs/: test_login_steps.py
selenium-java-demo/: Dockerfile  README.md  build.gradle  docker-compose.yml  pom.xml  settings.gradle
selenium-java-demo/src/test/java/api/: ApiBaseTest.java  PostApiTest.java  UserApiTest.java
selenium-java-demo/src/test/java/bdd/: CucumberRunner.java
selenium-java-demo/src/test/java/cdp/: CdpNetworkTest.java
selenium-java-demo/src/test/java/config/: ConfigReader.java  DriverFactory.java
selenium-java-demo/src/test/java/junit/: LoginJUnitTest.java
selenium-java-demo/src/test/java/pages/: BasePage.java  DropdownPage.java  LoginPage.java  (+8 more)
selenium-java-demo/src/test/resources/: categories.json  config.properties  testng.xml
(+23 files in other folders)
