[project]
name = "playwright-test-demo"
version = "1.0.0"
description = "E2E test automation framework with Playwright, Pytest, and Allure"
requires-python = ">=3.10"

dependencies = [
    "pytest>=8.3,<9",
    "playwright>=1.49,<2",
    "pytest-playwright>=0.6,<1",
    "python-dotenv>=1.0,<2",
    "allure-pytest>=2.13,<3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "smoke: quick smoke tests for critical paths",
    "regression: full regression test suite",
    "critical: tests for business-critical functionality",
]
addopts = "-v --tb=short"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
